--- a/build.gradle
+++ b/build.gradle
@@ -26,10 +26,12 @@ dependencies {
     compile gradleApi()
     compile localGroovy()
     compile 'org.gebish:geb-gradle:0.10.0'
-    compile 'com.saucelabs:saucerest:1.0.22'
+    compile 'com.saucelabs:saucerest:1.0.25'
     compile 'com.saucelabs:sauce_java_common:2.1.10'
     compile 'org.seleniumhq.selenium:selenium-java:2.42.2'
     compile 'com.github.detro:phantomjsdriver:1.2.0'
+    compile 'org.apache.commons:commons-lang3:3+'
+    compile 'commons-io:commons-io:2+'
     testCompile 'org.mockito:mockito-all:1.10.8'
 }
 
