--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'org.gebish:geb-gradle:0.10.0'
+        classpath('org.gebish:geb-gradle:0.10.0') {
+            exclude module: 'groovy-all'
+        }
     }
 }
 
@@ -25,18 +27,20 @@ repositories {
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile 'org.gebish:geb-gradle:0.10.0'
+    compile('org.gebish:geb-gradle:0.10.0') {
+        exclude module: 'groovy-all'
+    }
     compile 'com.saucelabs:saucerest:1.0.25'
     compile 'com.saucelabs:sauce_java_common:2.1.10'
-    compile 'org.seleniumhq.selenium:selenium-java:2.42.2'
-    compile 'com.github.detro:phantomjsdriver:1.2.0'
+    compile 'org.seleniumhq.selenium:selenium-java:2.46.0'
+    compile 'com.codeborne:phantomjsdriver:1.2.1'
     compile 'org.apache.commons:commons-lang3:3+'
     compile 'commons-io:commons-io:2+'
     testCompile 'org.mockito:mockito-all:1.10.8'
 }
 
 group = 'com.github.double16'
-version= '0.2-SNAPSHOT'
+version= '0.3-SNAPSHOT'
 description = """Provides support for running Selenium/junit functional tests with Sauce Labs."""
 
 uploadArchives {
